--- a/dhdrnet/notebooks/NN Evals.ipynb
+++ b/dhdrnet/notebooks/NN Evals.ipynb
@@ -2599,7 +2599,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DHDRNet",
+   "display_name": "dhdrnet",
    "language": "python",
    "name": "dhdrnet"
   },
@@ -2613,7 +2613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.7"
   },
   "name": "NN Evals.ipynb"
  },
